--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -55,7 +55,7 @@
 
 
                       <div class="col-md-6">                        
-                        <video width="480" height="270" controls>
+                        <video class="img-fluid" controls>
                           <source src="videos/Equivalencia.mp4" type="video/mp4">
                           <p></p>
                         </video>
@@ -96,7 +96,7 @@
                       </div>
 
                       <div class="col-md-6">
-                        <video width="480" height="270" controls>
+                        <video class="img-fluid" controls>
                           <source src="videos/Revalidación.mp4" type="video/mp4">
                           <p></p>
                         </video>
