--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -513,8 +513,11 @@
           quehacer profesional en alguna área de la
           Universidad.
 
-          <!--Proceso trabajo en UTEL-->
+        </div>
+
           <div class="accordion px-3" id="accordionPanelsStayOpenExample">
+
+            <!--Proceso UTEL-->
             <div class="accordion-item">
               <h2 class="accordion-header" id="panelsStayOpen-headingProceso art 91">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -560,39 +563,9 @@
 
             </div>
 
-            <div class="accordion-item">
-
-              <h2 class="accordion-header" id="panelsStayOpen-headingmalumnoutel">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#panelsStayOpen-collapsemalumnoulte" aria-expanded="true"
-                  aria-controls="panelsStayOpen-collapsemalumnoutel">
-                  Material para el alumno
-                </button>
-              </h2>
-
-              <div id="panelsStayOpen-collapsemalumnoutel" class="accordion-collapse collapse"
-                aria-labelledby="panelsStayOpen-headingmalumnoutel">
-                <div class="accordion-body">
-                  <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
-                    <h1 class="text-center">Material para el alumno</h1>
-
-                    <div class="row">
-
-                      <div class="col my-3 mx-3">
-
-
-                      </div>
-
-
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-            </div>
           </div>
 
-          <!--Formatos trabajo en UTEL-->
+          <!--Formatos UTEL-->
           <div class="container my-3 mx-3">
 
             Formatos <br/>
@@ -822,7 +795,7 @@
               </div>
             </div>
           </div>
-        </div>
+        
       </div>
     </div>
 
@@ -847,9 +820,9 @@
           antigüedad mínima de 6 meses en el puesto
         </div>
         
-        <!--Proceso-->
         <div class="accordion px-3" id="accordionPanelsStayOpenExample">
 
+          <!--Proceso-->
           <div class="accordion-item">
             <h2 class="accordion-header" id="panelsStayOpen-headingProceso art 91">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -909,26 +882,24 @@
 
           <div class="accordion-item">
 
-            <h2 class="accordion-header" id="panelsStayOpen-headingmalumnoutel">
+            <h2 class="accordion-header" id="panelsStayOpen-headingmalumnoart91">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#panelsStayOpen-collapsemalumnoulte" aria-expanded="true"
-                aria-controls="panelsStayOpen-collapsemalumnoutel">
+                data-bs-target="#panelsStayOpen-collapsemalumnoart91" aria-expanded="true"
+                aria-controls="panelsStayOpen-collapsemalumnoart91">
                 Material para el alumno
               </button>
             </h2>
 
-            <div id="panelsStayOpen-collapsemalumnoutel" class="accordion-collapse collapse"
-              aria-labelledby="panelsStayOpen-headingmalumnoutel">
+            <div id="panelsStayOpen-collapsemalumnoart91" class="accordion-collapse collapse"
+              aria-labelledby="panelsStayOpen-headingmalumnoart91">
               <div class="accordion-body">
                 <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
                   <h1 class="text-center">Material para el alumno</h1>
 
-                  <div class="row">
+                  <div class="row ">
 
-                    <div class="col my-3 mx-3">
-
-
-                    </div>
+                    
+                    <img class="img-proceso img-fluid" src="img/serviciosocial/info_art91.png">
 
 
                   </div>
@@ -1019,7 +990,7 @@
             <!--Excepción ART 91-->
             <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas"
               data-bs-target="#offcanvasBottomexcepcionart91" aria-controls="offcanvasBottom"><img style="height: 200px"
-                src="img/serviciosocial/art91/excepcionart91-formato.png" title="Excepción ART 91"> </button>
+            src="img/serviciosocial/art91/excepcionart91-formato.png" title="Excepción ART 91"> </button>
 
             <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottomexcepcionart91"
               aria-labelledby="offcanvasBottomLabel">
@@ -1133,9 +1104,9 @@
 
         </div>
 
-        <!--Proceso trabajo colaborativo -->
         <div class="accordion px-3" id="accordionPanelsStayOpenExample">
 
+          <!--Proceso trabajo colaborativo -->
           <div class="accordion-item">
             <h2 class="accordion-header" id="panelsStayOpen-headingproceso">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -1192,28 +1163,24 @@
 
           <div class="accordion-item">
 
-            <h2 class="accordion-header" id="panelsStayOpen-headingmaterialcolaborativo">
+            <h2 class="accordion-header" id="panelsStayOpen-headingmalumnocolaborativo">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#panelsStayOpen-collapsematerialcolaborativo" aria-expanded="true"
-                aria-controls="panelsStayOpen-collapsematerialcolaborativo">
+                data-bs-target="#panelsStayOpen-collapsemalumnocolaborativo" aria-expanded="true"
+                aria-controls="panelsStayOpen-collapsemalumnocolaborativo">
                 Material para el alumno
               </button>
             </h2>
 
-            <div id="panelsStayOpen-collapsematerialcolaborativo" class="accordion-collapse collapse"
-              aria-labelledby="panelsStayOpen-headingmaterialcolaborativo">
+            <div id="panelsStayOpen-collapsemalumnocolaborativo" class="accordion-collapse collapse"
+              aria-labelledby="panelsStayOpen-headingmalumnocolaborativo">
               <div class="accordion-body">
                 <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
                   <h1 class="text-center">Material para el alumno</h1>
 
-                  <div class="row">
+                  <div class="row ">
 
-                    <img class="img-proceso" src="img/serviciosocial/info_colaborativo.png">
-
-                    <div class="col my-3 mx-3">
-
-
-                    </div>
+                    
+                    <img class="img-proceso img-fluid" src="img/serviciosocial/info_colaborativo.png">
 
 
                   </div>
@@ -1486,9 +1453,9 @@
 
         </div>
 
-        <!--Proceso Servicio social para las juventudes -->
         <div class="accordion px-3" id="accordionPanelsStayOpenExample">
 
+          <!--Proceso Servicio social para las juventudes -->
           <div class="accordion-item">
             <h2 class="accordion-header" id="panelsStayOpen-headingproceso">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -1544,26 +1511,24 @@
 
           <div class="accordion-item">
 
-            <h2 class="accordion-header" id="panelsStayOpen-headingmalumnoutel">
+            <h2 class="accordion-header" id="panelsStayOpen-headingmalumnojuventudes">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#panelsStayOpen-collapsemalumnoulte" aria-expanded="true"
-                aria-controls="panelsStayOpen-collapsemalumnoutel">
+                data-bs-target="#panelsStayOpen-collapsemalumnojuventudes" aria-expanded="true"
+                aria-controls="panelsStayOpen-collapsemalumnojuventudes">
                 Material para el alumno
               </button>
             </h2>
 
-            <div id="panelsStayOpen-collapsemalumnoutel" class="accordion-collapse collapse"
-              aria-labelledby="panelsStayOpen-headingmalumnoutel">
+            <div id="panelsStayOpen-collapsemalumnojuventudes" class="accordion-collapse collapse"
+              aria-labelledby="panelsStayOpen-headingmalumnojuventudes">
               <div class="accordion-body">
                 <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
                   <h1 class="text-center">Material para el alumno</h1>
 
-                  <div class="row">
+                  <div class="row ">
 
-                    <div class="col my-3 mx-3">
-
-
-                    </div>
+                    
+                    <img class="img-proceso img-fluid" src="img/serviciosocial/info_juventudes.png">
 
 
                   </div>
@@ -1572,7 +1537,6 @@
             </div>
 
           </div>
-
         </div>
 
 
@@ -1841,9 +1805,10 @@
 
         </div>
 
-        <!--Proceso Coach Titulación y Profesionalización -->
         <div class="accordion px-3" id="accordionPanelsStayOpenExample">
 
+          <!--Proceso Coach Titulación y Profesionalización -->
+          
           <div class="accordion-item">
             <h2 class="accordion-header" id="panelsStayOpen-headingproceso">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -1891,37 +1856,6 @@
             </div>
 
           </div>
-
-          <div class="accordion-item">
-
-              <h2 class="accordion-header" id="panelsStayOpen-headingmalumnoutel">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#panelsStayOpen-collapsemalumnoulte" aria-expanded="true"
-                  aria-controls="panelsStayOpen-collapsemalumnoutel">
-                  Material para el alumno
-                </button>
-              </h2>
-
-              <div id="panelsStayOpen-collapsemalumnoutel" class="accordion-collapse collapse"
-                aria-labelledby="panelsStayOpen-headingmalumnoutel">
-                <div class="accordion-body">
-                  <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
-                    <h1 class="text-center">Material para el alumno</h1>
-
-                    <div class="row">
-
-                      <div class="col my-3 mx-3">
-
-
-                      </div>
-
-
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-            </div>
 
         </div>
 
@@ -2190,9 +2124,9 @@
 
         </div>
 
-        <!--Proceso Servicio Social Para la Comunidad-->
         <div class="accordion px-3" id="accordionPanelsStayOpenExample">
 
+          <!--Proceso Servicio Social Para la Comunidad-->
           <div class="accordion-item">
             <h2 class="accordion-header" id="panelsStayOpen-headingproceso">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -2239,35 +2173,29 @@
 
           <div class="accordion-item">
 
-            <h2 class="accordion-header" id="panelsStayOpen-headingmalumnoutel">
+            <h2 class="accordion-header" id="panelsStayOpen-headingmalumnocomunidad">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#panelsStayOpen-collapsemalumnoulte" aria-expanded="true"
-                aria-controls="panelsStayOpen-collapsemalumnoutel">
+                data-bs-target="#panelsStayOpen-collapsemalumnocomunidad" aria-expanded="true"
+                aria-controls="panelsStayOpen-collapsemalumnocomunidad">
                 Material para el alumno
               </button>
             </h2>
 
-            <div id="panelsStayOpen-collapsemalumnoutel" class="accordion-collapse collapse"
-              aria-labelledby="panelsStayOpen-headingmalumnoutel">
+            <div id="panelsStayOpen-collapsemalumnocomunidad" class="accordion-collapse collapse"
+              aria-labelledby="panelsStayOpen-headingmalumnocomunidad">
               <div class="accordion-body">
                 <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
                   <h1 class="text-center">Material para el alumno</h1>
 
-                  <div class="row">
+                  <div class="row ">
 
-                    <div class="col my-3 mx-3">
-
-
-                    </div>
-
+                    <img class="img-proceso img-fluid" src="img/serviciosocial/info_comunidad.png">
 
                   </div>
                 </div>
               </div>
             </div>
-
-          </div>
-
+          </div>          
         </div>
 
 
@@ -2537,9 +2465,9 @@
 
         </div>
 
-        <!--Proceso Servicio Social Con Causa-->
         <div class="accordion px-3" id="accordionPanelsStayOpenExample">
 
+          <!--Proceso Servicio Social Con Causa-->
           <div class="accordion-item">
             <h2 class="accordion-header" id="panelsStayOpen-headingproceso">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -2590,34 +2518,29 @@
 
           <div class="accordion-item">
 
-            <h2 class="accordion-header" id="panelsStayOpen-headingmalumnoutel">
+            <h2 class="accordion-header" id="panelsStayOpen-headingmalumnocausa">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#panelsStayOpen-collapsemalumnoulte" aria-expanded="true"
-                aria-controls="panelsStayOpen-collapsemalumnoutel">
+                data-bs-target="#panelsStayOpen-collapsemalumnocausa" aria-expanded="true"
+                aria-controls="panelsStayOpen-collapsemalumnocausa">
                 Material para el alumno
               </button>
             </h2>
 
-            <div id="panelsStayOpen-collapsemalumnoutel" class="accordion-collapse collapse"
-              aria-labelledby="panelsStayOpen-headingmalumnoutel">
+            <div id="panelsStayOpen-collapsemalumnocausa" class="accordion-collapse collapse"
+              aria-labelledby="panelsStayOpen-headingmalumnocausa">
               <div class="accordion-body">
                 <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
                   <h1 class="text-center">Material para el alumno</h1>
 
-                  <div class="row">
+                  <div class="row ">
 
-                    <div class="col my-3 mx-3">
-
-
-                    </div>
-
+                    <img class="img-proceso img-fluid" src="img/serviciosocial/info_causa.png">
 
                   </div>
                 </div>
               </div>
             </div>
-
-          </div>
+          </div>   
 
         </div>
 
@@ -2882,9 +2805,9 @@
 
         </div>
 
-        <!--Proceso Servicio Social en Empresas y Emprendimientos-->
         <div class="accordion px-3" id="accordionPanelsStayOpenExample">
 
+          <!--Proceso Servicio Social en Empresas y Emprendimientos-->
           <div class="accordion-item">
             <h2 class="accordion-header" id="panelsStayOpen-headingproceso">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -2941,34 +2864,29 @@
 
           <div class="accordion-item">
 
-            <h2 class="accordion-header" id="panelsStayOpen-headingmalumnoutel">
+            <h2 class="accordion-header" id="panelsStayOpen-headingmalumnoemprendimiento">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#panelsStayOpen-collapsemalumnoulte" aria-expanded="true"
-                aria-controls="panelsStayOpen-collapsemalumnoutel">
+                data-bs-target="#panelsStayOpen-collapsemalumnoemprendimiento" aria-expanded="true"
+                aria-controls="panelsStayOpen-collapsemalumnoemprendimiento">
                 Material para el alumno
               </button>
             </h2>
 
-            <div id="panelsStayOpen-collapsemalumnoutel" class="accordion-collapse collapse"
-              aria-labelledby="panelsStayOpen-headingmalumnoutel">
+            <div id="panelsStayOpen-collapsemalumnoemprendimiento" class="accordion-collapse collapse"
+              aria-labelledby="panelsStayOpen-headingmalumnoemprendimiento">
               <div class="accordion-body">
                 <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
                   <h1 class="text-center">Material para el alumno</h1>
 
-                  <div class="row">
+                  <div class="row ">
 
-                    <div class="col my-3 mx-3">
-
-
-                    </div>
-
+                    <img class="img-proceso img-fluid" src="img/serviciosocial/info_emprendimiento.png">
 
                   </div>
                 </div>
               </div>
             </div>
-
-          </div>
+          </div>   
 
         </div>
 
@@ -3234,9 +3152,9 @@
 
         </div>
 
-        <!--Proceso Servicio Social Programa de Tutorías-->
         <div class="accordion px-3" id="accordionPanelsStayOpenExample">
 
+          <!--Proceso Servicio Social Programa de Tutorías-->
           <div class="accordion-item">
             <h2 class="accordion-header" id="panelsStayOpen-headingproceso">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -3281,34 +3199,29 @@
 
           <div class="accordion-item">
 
-            <h2 class="accordion-header" id="panelsStayOpen-headingmalumnoutel">
+            <h2 class="accordion-header" id="panelsStayOpen-headingmalumnotuto">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#panelsStayOpen-collapsemalumnoulte" aria-expanded="true"
-                aria-controls="panelsStayOpen-collapsemalumnoutel">
+                data-bs-target="#panelsStayOpen-collapsemalumnotuto" aria-expanded="true"
+                aria-controls="panelsStayOpen-collapsemalumnotuto">
                 Material para el alumno
               </button>
             </h2>
 
-            <div id="panelsStayOpen-collapsemalumnoutel" class="accordion-collapse collapse"
-              aria-labelledby="panelsStayOpen-headingmalumnoutel">
+            <div id="panelsStayOpen-collapsemalumnotuto" class="accordion-collapse collapse"
+              aria-labelledby="panelsStayOpen-headingmalumnotuto">
               <div class="accordion-body">
                 <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
                   <h1 class="text-center">Material para el alumno</h1>
 
-                  <div class="row">
+                  <div class="row ">
 
-                    <div class="col my-3 mx-3">
-
-
-                    </div>
-
+                    <img class="img-proceso img-fluid" src="img/serviciosocial/info_tuto.png">
 
                   </div>
                 </div>
               </div>
             </div>
-
-          </div>
+          </div>  
 
         </div>
 
