--- a/src/views/directorio.hbs
+++ b/src/views/directorio.hbs
@@ -2795,7 +2795,7 @@
 
   <div class="row">
     <div class="col col-mb-4">
-      Formulario para cita de entrega de RG y Doc
+      Drive para generar cita
     </div>
 
     <div class="col col-mb-4">
@@ -2836,6 +2836,39 @@
       <a href="https://docs.google.com/spreadsheets/d/1CTItGe4fY-9SKGVnxzkv8ZmcFMIELNeQ7tXzwmisS4E/edit?usp=sharing"
         class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Ir</a></br>
     </div>
+
+  </div>
+
+  <div class="row">
+    <div class="col col-mb-4">
+      Solicitar asesor para proyecto de titulación
+    </div>
+
+    <div class="col col-mb-4">
+      Formulario para compartirle al egresado que no esté en el drive de proyecto de titulación
+    </div>
+
+    <div class="col col-mb-4">
+      <a href="https://app.flokzu.com/public/01bb9LOPG"
+        class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Ir</a></br>
+    </div>
+
+  </div>
+
+  <div class="row">
+    <div class="col col-mb-4">
+      Drive de consulta 
+    </div>
+
+    <div class="col col-mb-4">
+      Conocer el estatus de la Representación gráica RG 
+    </div>
+
+    <div class="col col-mb-4">
+      <a href="https://docs.google.com/spreadsheets/d/15cT69LtvuwjLdkckT-BmJ5gb4s8ey8pugFmYbsvkVpQ/edit?usp=sharing"
+        class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Ir</a></br>
+    </div>
+
   </div>
 
   <br />
