--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -201,28 +201,28 @@
                               <div class="col">
 
                                 <strong>Documentación para licenciatura:</strong> </br></br>
-                                ● ● ntecedentes académicos bachillerato</br>
-                                ● ● arta compromiso</br>
-                                ● ● arta motivos</br>
-                                ● ● omprobante de domicilio</br>
-                                ● ● dentificación</br></br>
+                                ● Antecedentes académicos bachillerato</br>
+                                ● Carta compromiso</br>
+                                ● Carta motivos</br>
+                                ● Comprobante de domicilio</br>
+                                ● Adentificación</br></br>
 
                                 <strong>Documentación para Maestría:</strong> </br></br>
-                                ● ● ntecedentes académicos licenciatura</br>
-                                ● ● arta compromiso</br>
-                                ● ● arta motivos</br>
-                                ● ● onstancia laboral
-                                ● ● urriculum
-                                ● ● omprobante de domicilio</br>
-                                ● ● dentificación</br></br>
+                                ● Antecedentes académicos licenciatura</br>
+                                ● Carta compromiso</br>
+                                ● Carta motivos</br>
+                                ● Constancia laboral
+                                ● Curriculum
+                                ● Comprobante de domicilio</br>
+                                ● Identificación</br></br>
 
                                 <strong>Documentación para Doctorado:</strong> </br></br>
-                                ● ● ntecedentes académicos licenciatura</br>
-                                ● ● arta compromiso</br>
-                                ● ● arta motivos</br>
-                                ● ● onstancia laboral
-                                ● ● urriculum
-                                ● ● omprobante de domicilio</br>
+                                ● Antecedentes académicos licenciatura</br>
+                                ● Carta compromiso</br>
+                                ● Carta motivos</br>
+                                ● Constancia laboral
+                                ● Curriculum
+                                ● Comprobante de domicilio</br>
                                 ● Identificación</br></br>
 
                               </div>
@@ -288,10 +288,10 @@
                                 ● Antecedentes académicos licenciatura</br>
                                 ● Carta compromiso</br>
                                 ● Carta motivos</br>
-                                ● Constancia laboral
-                                ● Curriculum
+                                ● Constancia laboral</br>   
+                                ● Curriculum</br>
                                 ● Comprobante de domicilio</br>
-                                ● Identificación</br></br>
+                                ● Identificación</br>
 
                               </div>
 
