Info correct disp

--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -28,11 +28,11 @@
 
           <!--Certificado apostillado-->
           <div class="row row-cols-1 row-cols-xl-1 row-cols-md-1 g-4 my-1">
-              <div class="col">
+            <div class="col">
               <div class="card border-0 mb-3" >
                   <div class="row g-0">
 
-                    <div class="col-md-8">
+                    <div class="col-lg-8">
                       <div class="card-body">
                         <h5 class="card-title text-center">Certificado apostillado</h5>
                         <p class="card-text">     
@@ -49,8 +49,8 @@
                       </div>
                     </div>
 
-                    <div class="col-md-4">
-                      <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom4" aria-controls="offcanvasBottom"><img style=" max-width: 300px;"src="./img/titulacion/licenciatura/nacional/certificadolic.png"></button>
+                    <div class="col-lg-4">
+                      <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom4" aria-controls="offcanvasBottom"><img class="img-fluid" src="./img/titulacion/licenciatura/nacional/certificadolic.png"></button>
 
                       <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom4" aria-labelledby="offcanvasBottomLabel">
                       <div class="offcanvas-header">
@@ -117,16 +117,16 @@
                     
                   </div>
               </div>
-              </div>
-              
+            </div>
           </div>
+
           <!--Título apostillado-->
           <div class="row row-cols-1 row-cols-xl-1 row-cols-md-1 g-4 my-1">
             <div class="col">
             <div class="card border-0 mb-3" >
                 <div class="row g-0">
 
-                  <div class="col-md-8">
+                  <div class="col-lg-8">
                     <div class="card-body">
                       <h5 class="card-title text-center">Título apostillado</h5>
                       <p class="card-text">     
@@ -143,8 +143,8 @@
                     </div>
                   </div>
 
-                  <div class="col-md-4">
-                    <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom-tit-apost" aria-controls="offcanvasBottom"><img style=" max-width: 300px;"src="img/titulacion/licenciatura/nacional/titulolic.png"></button>
+                  <div class="col-lg-4">
+                    <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom-tit-apost" aria-controls="offcanvasBottom"><img class="img-fluid" src="img/titulacion/licenciatura/nacional/titulolic.png"></button>
 
                     <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom-tit-apost" aria-labelledby="offcanvasBottomLabel">
                     <div class="offcanvas-header">
