--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -193,13 +193,7 @@
                   <div class="row">
 
                     
-                    <img class="img-proceso" src="img/serviciosocial/info_regular.png">
-
-                    <div class="col my-3 mx-3">
-
-
-                    </div>
-
+                    <img class="img-proceso img-fluid" src="img/serviciosocial/info_regular.png">
 
                   </div>
                 </div>
