--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -633,7 +633,7 @@
                     </div>
 
                     <div class="col-md-4">
-                      <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom4" aria-controls="offcanvasBottom"><img style=" max-width: 300px;"src="img/titulacion/cerpar1.png"></button>
+                      <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom4" aria-controls="offcanvasBottom"><img class="img-fluid" src="img/titulacion/cerpar1.png"></button>
 
                       <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom4" aria-labelledby="offcanvasBottomLabel">
                       <div class="offcanvas-header">
