--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -639,17 +639,17 @@
 
                               <div class="col">
                                 <strong>Manuales de validación</strong></br>
-                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Ecuador/validar_certificado.pdf"
+                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/España/validar_certificado.pdf"
                                   target="_blank">¿Cómo validar un antecedente academico?</a>
-                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Ecuador/validar_identificacion.pdf"
+                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/España/validar_identificacion.pdf"
                                   target="_blank">¿Cómo validar una identificación?</a>
-                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Ecuador/validar_comprobante.pdf"
+                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/España/validar_comprobante.pdf"
                                   target="_blank">¿Cómo validar un Comprobante de domicilio?</a>
-                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Ecuador/validar_cartayanexo.pdf"
+                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/España/validar_cartayanexo.pdf"
                                   target="_blank">¿Cómo validar una carta compromiso y anexo?</a>
-                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Ecuador/validar-cartamotivos.pdf"
+                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/España/validar-cartamotivos.pdf"
                                   target="_blank">¿Cómo validar una carta motivos?</a>
-                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Ecuador/validar-laboral.pdf"
+                                <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/España/validar-laboral.pdf"
                                   target="_blank">¿Cómo validar una constancia laboral?</a> 
                               </div>
                             </div>
@@ -931,10 +931,10 @@
                         </div>
 
                       </div>
-
-                      <!---USA--->
+                  
+                      <!---USA
                       <div class="accordion-item">
-                        <!--Botón-->
+                  
                         <h2 class="accordion-header" id="panelsStayOpen-headingDocumentosUSA">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#panelsStayOpen-collapseDocumentosUSA" aria-expanded="true"
@@ -942,7 +942,7 @@
                             Documentos USA
                           </button>
                         </h2>
-                        <!--Contenido-->
+            
                         <div id="panelsStayOpen-collapseDocumentosUSA" class="accordion-collapse collapse"
                           aria-labelledby="panelsStayOpen-headingDocumentosUSA">
                           <div class="accordion-body">
@@ -999,6 +999,8 @@
                         </div>
 
                       </div>
+
+                      --->
 
                     </div>
                   </div>
