--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -211,8 +211,8 @@
                                 ● Antecedentes académicos licenciatura</br>
                                 ● Carta compromiso</br>
                                 ● Carta motivos</br>
-                                ● Constancia laboral
-                                ● Curriculum
+                                ● Constancia laboral</br>
+                                ● Curriculum</br>
                                 ● Comprobante de domicilio</br>
                                 ● Identificación</br></br>
 
@@ -220,8 +220,8 @@
                                 ● Antecedentes académicos licenciatura</br>
                                 ● Carta compromiso</br>
                                 ● Carta motivos</br>
-                                ● Constancia laboral
-                                ● Curriculum
+                                ● Constancia laboral</br>
+                                ● Curriculum</br>
                                 ● Comprobante de domicilio</br>
                                 ● Identificación</br></br>
 
@@ -279,8 +279,8 @@
                                 ● Antecedentes académicos licenciatura</br>
                                 ● Carta compromiso</br>
                                 ● Carta motivos</br>
-                                ● Constancia laboral
-                                ● Curriculum
+                                ● Constancia laboral</br>
+                                ● Curriculum</br>
                                 ● Comprobante de domicilio</br>
                                 ● Identificación</br></br>
 
@@ -347,8 +347,8 @@
                                 ● Antecedentes académicos licenciatura</br>
                                 ● Carta compromiso</br>
                                 ● Carta motivos</br>
-                                ● Constancia laboral
-                                ● Curriculum
+                                ● Constancia laboral</br>
+                                ● Curriculum</br>
                                 ● Comprobante de domicilio</br>
                                 ● Identificación</br></br>
 
@@ -356,8 +356,8 @@
                                 ● Antecedentes académicos licenciatura</br>
                                 ● Carta compromiso</br>
                                 ● Carta motivos</br>
-                                ● Constancia laboral
-                                ● Curriculum
+                                ● Constancia laboral</br>
+                                ● Curriculum</br>
                                 ● Comprobante de domicilio</br>
                                 ● Identificación</br></br>
 
@@ -418,8 +418,8 @@
                                 ● Antecedentes académicos licenciatura</br>
                                 ● Carta compromiso</br>
                                 ● Carta motivos</br>
-                                ● Constancia laboral
-                                ● Curriculum
+                                ● Constancia laboral</br>
+                                ● Curriculum</br>
                                 ● Comprobante de domicilio</br>
                                 ● Identificación</br></br>
 
@@ -427,8 +427,8 @@
                                 ● Antecedentes académicos licenciatura</br>
                                 ● Carta compromiso</br>
                                 ● Carta motivos</br>
-                                ● Constancia laboral
-                                ● Curriculum
+                                ● Constancia laboral</br>
+                                ● Curriculum</br>
                                 ● Comprobante de domicilio</br>
                                 ● Identificación</br></br>
 
@@ -485,8 +485,8 @@
                                 ● Antecedentes académicos licenciatura</br>
                                 ● Carta compromiso</br>
                                 ● Carta motivos</br>
-                                ● Constancia laboral
-                                ● Curriculum
+                                ● Constancia laboral</br>
+                                ● Curriculum</br>
                                 ● Comprobante de domicilio</br>
                                 ● Identificación</br></br>
 
@@ -494,8 +494,8 @@
                                 ● Antecedentes académicos licenciatura</br>
                                 ● Carta compromiso</br>
                                 ● Carta motivos</br>
-                                ● Constancia laboral
-                                ● Curriculum
+                                ● Constancia laboral</br>
+                                ● Curriculum</br>
                                 ● Comprobante de domicilio</br>
                                 ● Identificación</br></br>
 
@@ -552,8 +552,8 @@
                                 ● Antecedentes académicos licenciatura</br>
                                 ● Carta compromiso</br>
                                 ● Carta motivos</br>
-                                ● Constancia laboral
-                                ● Curriculum
+                                ● Constancia laboral</br>
+                                ● Curriculum</br>
                                 ● Comprobante de domicilio</br>
                                 ● Identificación</br></br>
 
@@ -561,8 +561,8 @@
                                 ● Antecedentes académicos licenciatura</br>
                                 ● Carta compromiso</br>
                                 ● Carta motivos</br>
-                                ● Constancia laboral
-                                ● Curriculum
+                                ● Constancia laboral</br>
+                                ● Curriculum</br>
                                 ● Comprobante de domicilio</br>
                                 ● Identificación</br></br>
 
@@ -610,29 +610,29 @@
                               <div class="col">
   
                                 <strong>Documentación para licenciatura:</strong> </br></br>
-                                -Antecedentes académicos bachillerato</br>
-                                -Carta compromiso</br>
-                                -Carta motivos</br>
-                                -Comprobante de domicilio</br>
-                                -Identificación</br></br>
+                                ● Antecedentes académicos bachillerato</br>
+                                ● Carta compromiso</br>
+                                ● Carta motivos</br>
+                                ● Comprobante de domicilio</br>
+                                ● Identificación</br></br>
 
                                 <strong>Documentación para Maestría:</strong> </br></br>
-                                -Antecedentes académicos licenciatura</br>
-                                -Carta compromiso</br>
-                                -Carta motivos</br>
-                                -Constancia laboral
-                                -Curriculum
-                                -Comprobante de domicilio</br>
-                                -Identificación</br></br>
+                                ● Antecedentes académicos licenciatura</br>
+                                ● Carta compromiso</br>
+                                ● Carta motivos</br>
+                                ● Constancia laboral</br>
+                                ● Curriculum</br>
+                                ● Comprobante de domicilio</br>
+                                ● Identificación</br></br>
 
                                 <strong>Documentación para Doctorado:</strong> </br></br>
-                                -Antecedentes académicos licenciatura</br>
-                                -Carta compromiso</br>
-                                -Carta motivos</br>
-                                -Constancia laboral
-                                -Curriculum
-                                -Comprobante de domicilio</br>
-                                -Identificación</br></br>
+                                ● Antecedentes académicos licenciatura</br>
+                                ● Carta compromiso</br>
+                                ● Carta motivos</br>
+                                ● Constancia laboral</br>
+                                ● Curriculum</br>
+                                ● Comprobante de domicilio</br>
+                                ● Identificación</br></br>
 
 
                               </div>
@@ -677,29 +677,29 @@
                               <div class="col">
 
                                 <strong>Documentación para licenciatura:</strong> </br></br>
-                                -Antecedentes académicos bachillerato</br>
-                                -Carta compromiso</br>
-                                -Carta motivos</br>
-                                -Comprobante de domicilio</br>
-                                -Identificación</br></br>
+                                ● Antecedentes académicos bachillerato</br>
+                                ● Carta compromiso</br>
+                                ● Carta motivos</br>
+                                ● Comprobante de domicilio</br>
+                                ● Identificación</br></br>
 
                                 <strong>Documentación para Maestría:</strong> </br></br>
-                                -Antecedentes académicos licenciatura</br>
-                                -Carta compromiso</br>
-                                -Carta motivos</br>
-                                -Constancia laboral
-                                -Curriculum
-                                -Comprobante de domicilio</br>
-                                -Identificación</br></br>
+                                ● Antecedentes académicos licenciatura</br>
+                                ● Carta compromiso</br>
+                                ● Carta motivos</br>
+                                ● Constancia laboral</br>
+                                ● Curriculum</br>
+                                ● Comprobante de domicilio</br>
+                                ● Identificación</br></br>
 
                                 <strong>Documentación para Doctorado:</strong> </br></br>
-                                -Antecedentes académicos licenciatura</br>
-                                -Carta compromiso</br>
-                                -Carta motivos</br>
-                                -Constancia laboral
-                                -Curriculum
-                                -Comprobante de domicilio</br>
-                                -Identificación</br></br>
+                                ● Antecedentes académicos licenciatura</br>
+                                ● Carta compromiso</br>
+                                ● Carta motivos</br>
+                                ● Constancia laboral</br>
+                                ● Curriculum</br>
+                                ● Comprobante de domicilio</br>
+                                ● Identificación</br></br>
 
                               </div>
 
@@ -745,29 +745,29 @@
                               <div class="col">
 
                                 <strong>Documentación para licenciatura:</strong> </br></br>
-                                -Antecedentes académicos bachillerato</br>
-                                -Carta compromiso</br>
-                                -Carta motivos</br>
-                                -Comprobante de domicilio</br>
-                                -Identificación</br></br>
+                                ● Antecedentes académicos bachillerato</br>
+                                ● Carta compromiso</br>
+                                ● Carta motivos</br>
+                                ● Comprobante de domicilio</br>
+                                ● Identificación</br></br>
 
                                 <strong>Documentación para Maestría:</strong> </br></br>
-                                -Antecedentes académicos licenciatura</br>
-                                -Carta compromiso</br>
-                                -Carta motivos</br>
-                                -Constancia laboral
-                                -Curriculum
-                                -Comprobante de domicilio</br>
-                                -Identificación</br></br>
+                                ● Antecedentes académicos licenciatura</br>
+                                ● Carta compromiso</br>
+                                ● Carta motivos</br>
+                                ● Constancia laboral</br>
+                                ● Curriculum</br>
+                                ● Comprobante de domicilio</br>
+                                ● Identificación</br></br>
 
                                 <strong>Documentación para Doctorado:</strong> </br></br>
-                                -Antecedentes académicos licenciatura</br>
-                                -Carta compromiso</br>
-                                -Carta motivos</br>
-                                -Constancia laboral
-                                -Curriculum
-                                -Comprobante de domicilio</br>
-                                -Identificación</br></br>
+                                ● Antecedentes académicos licenciatura</br>
+                                ● Carta compromiso</br>
+                                ● Carta motivos</br>
+                                ● Constancia laboral</br>
+                                ● Curriculum</br>
+                                ● Comprobante de domicilio</br>
+                                ● Identificación</br></br>
 
                               </div>
 
@@ -813,29 +813,29 @@
                               <div class="col">
 
                                 <strong>Documentación para licenciatura:</strong> </br></br>
-                                -Antecedentes académicos bachillerato</br>
-                                -Carta compromiso</br>
-                                -Carta motivos</br>
-                                -Comprobante de domicilio</br>
-                                -Identificación</br></br>
+                                ● Antecedentes académicos bachillerato</br>
+                                ● Carta compromiso</br>
+                                ● Carta motivos</br>
+                                ● Comprobante de domicilio</br>
+                                ● Identificación</br></br>
 
                                 <strong>Documentación para Maestría:</strong> </br></br>
-                                -Antecedentes académicos licenciatura</br>
-                                -Carta compromiso</br>
-                                -Carta motivos</br>
-                                -Constancia laboral
-                                -Curriculum
-                                -Comprobante de domicilio</br>
-                                -Identificación</br></br>
+                                ● Antecedentes académicos licenciatura</br>
+                                ● Carta compromiso</br>
+                                ● Carta motivos</br>
+                                ● Constancia laboral</br>
+                                ● Curriculum</br>
+                                ● Comprobante de domicilio</br>
+                                ● Identificación</br></br>
 
                                 <strong>Documentación para Doctorado:</strong> </br></br>
-                                -Antecedentes académicos licenciatura</br>
-                                -Carta compromiso</br>
-                                -Carta motivos</br>
-                                -Constancia laboral
-                                -Curriculum
-                                -Comprobante de domicilio</br>
-                                -Identificación</br></br>
+                                ● Antecedentes académicos licenciatura</br>
+                                ● Carta compromiso</br>
+                                ● Carta motivos</br>
+                                ● Constancia laboral</br>
+                                ● Curriculum</br>
+                                ● Comprobante de domicilio</br>
+                                ● Identificación</br></br>
 
 
                               </div>
@@ -883,29 +883,29 @@
                               <div class="col">
 
                                 <strong>Documentación para licenciatura:</strong> </br></br>
-                                -Antecedentes académicos bachillerato</br>
-                                -Carta compromiso</br>
-                                -Carta motivos</br>
-                                -Comprobante de domicilio</br>
-                                -Identificación</br></br>
+                                ● Antecedentes académicos bachillerato</br>
+                                ● Carta compromiso</br>
+                                ● Carta motivos</br>
+                                ● Comprobante de domicilio</br>
+                                ● Identificación</br></br>
 
                                 <strong>Documentación para Maestría:</strong> </br></br>
-                                -Antecedentes académicos licenciatura</br>
-                                -Carta compromiso</br>
-                                -Carta motivos</br>
-                                -Constancia laboral
-                                -Curriculum
-                                -Comprobante de domicilio</br>
-                                -Identificación</br></br>
+                                ● Antecedentes académicos licenciatura</br>
+                                ● Carta compromiso</br>
+                                ● Carta motivos</br>
+                                ● Constancia laboral</br>
+                                ● Curriculum</br>
+                                ● Comprobante de domicilio</br>
+                                ● Identificación</br></br>
 
                                 <strong>Documentación para Doctorado:</strong> </br></br>
-                                -Antecedentes académicos licenciatura</br>
-                                -Carta compromiso</br>
-                                -Carta motivos</br>
-                                -Constancia laboral
-                                -Curriculum
-                                -Comprobante de domicilio</br>
-                                -Identificación</br></br>
+                                ● Antecedentes académicos licenciatura</br>
+                                ● Carta compromiso</br>
+                                ● Carta motivos</br>
+                                ● Constancia laboral</br>
+                                ● Curriculum</br>
+                                ● Comprobante de domicilio</br>
+                                ● Identificación</br></br>
 
                               </div>
 
