--- a/src/views/preguntas.hbs
+++ b/src/views/preguntas.hbs
@@ -49,7 +49,7 @@
 
                   <h6><b>¿Cuánto tiempo dura el trámite de titulación?</b></h6>
                   <a>
-                    El trámite dura un tiempo estimado de 8 meses.En ocasiones se puede extender por situaciones internas o externas.
+                    El trámite dura un tiempo estimado de 8 meses. En ocasiones se puede extender por situaciones internas o externas.
                   </a>
 
                   </div>
@@ -285,22 +285,8 @@
               <div class="bloque" id="bloquePreguntasFrecuentesControlDocumental">
                 <div class="card border-0 py-3 px-3" id="Preguntasprueba" >
                   
-                  <div class="pf card border-0 py-3 px-3" id="qhssiucd" >
-                    
-                    <h6><b>¿Qué hacer si se identifica un CURP duplicado?</b></h6>
-                    <a>
-                        
-                        Lo primero que se tiene que identificar es si ya se realizó una unificación ante RENAPO, en caso de que no, brindarle 
-                        instrucciones al alumno para realizar el proceso y obtener la CURP con la leyenda de curp unificado.<br/><br/>
-    
-                        <img src="img/busqueda/curp.png" alt=""><br/><br/>
-
-                        En caso de que el alumno realice este trámite posterior a la titulación es necesario realizar la corrección de sus 
-                        documentos ya que no podrá tramitar su Cédula en la plataforma de la SEP, Lo primero que se tiene que identificar es si ya 
-                        se realizo 
-                      </a>    
-
-                  </div>
+                  
+                  
 
                   <div class="pf card border-0 py-3 px-3" id="" >
                     
@@ -322,12 +308,47 @@
 
                   <div class="pf card border-0 py-3 px-3" id="" >
                     
-                    <h6><b>¿Otra persona puede recoger mi documentación?</b></h6>
-                    <a>
-                      
-                    </a>    
+                    <h6><b>¿Dónde puede legalizar un documento?</b></h6>
+                      Los documentos expedidos por autoridades de cualquier Estado de la República Mexicana, deberán legalizarse en la Secretaría General de Gobierno de los Estados.
+
+                      <br/><br/>
+                      Mas información en el siguiente enlace:<br/>
+
+                      http://dicoppu.segob.gob.mx/es/DICOPPU/Requisitos2
+
+                      <div class="col-md-4 card py-3 px-3 border-0">
+           
+                        <a class="Botonmanual py-3 text-center border-0" href="http://dicoppu.segob.gob.mx/es/DICOPPU/Requisitos2"
+                          target="_blank">Visitar web
+                        </a>
+                      </div>
 
                   </div>
+
+                  <div class="pf card border-0 py-3 px-3" id="" >
+                    
+                    <h6><b>¿Otra persona puede recoger mi documentación?</b></h6>
+
+                    Una persona puede recoger la documentación de un alumno siempre y cuando el conocido o familiar lleve una carta poder original firmada por el alumno/egresado y copias de una identificación oficial de ambos.
+
+                  </div>
+
+                  <div class="pf card border-0 py-3 px-3" id="qhssiucd" >
+                    
+                    <h6><b>¿Qué hacer si se identifica un CURP duplicado?</b></h6>
+                    <a>
+                        
+                        Lo primero que se tiene que identificar es si ya se realizó una unificación ante RENAPO, en caso de que no, brindarle 
+                        instrucciones al alumno para realizar el proceso y obtener la CURP con la leyenda de curp unificado.<br/><br/>
+    
+                        <img src="img/busqueda/curp.png" alt=""><br/><br/>
+
+                        En caso de que el alumno realice este trámite posterior a la titulación es necesario realizar la corrección de sus documentos ya que no podrá tramitar su Cédula en la plataforma de la SEP, Lo primero que se tiene que identificar que CURP tiene su documentación oficial, en caso de ser incorrecto deberá cubrir el costo de corrección de documentos desde la plataforma SIU (Es un trámite por cada documento)
+                      </a>    
+
+                  </div>
+
+                  
 
               </div>
                 
@@ -340,28 +361,22 @@
                  <div class="pf card border-0 py-3 px-3" id="">
                     
                     <h6><b>Constancia de estudios</b></h6>
-                     
-                     <br/>
 
-                    <a>
-                      Constancia de estudios <br/>
                       Documento que hace constar que el alumno se encuentra actualmente inscrito en la universidad.<br/><br/>
 
-                      Constancia de Pago<br/>
-                      Indica los pagos que ha realizado el alumno y los que tiene pendientes.<br/><br/>
+                      Para realizar el trámite de constancia se necesita:<br/>
 
-                      Para realizar el trámite de constancia se necesita:<br/><br/>
+                      -Tener tu documentación física (acta de nacimiento y certificado de bachillerato)<br/>
 
-                      -Tener tu documentación física (acta de nacimiento y certificado de bachillerato)<br/><br/>
+                      -Tener tus pagos al corriente<br/>
 
-                      -Tener tus pagos al corriente<br/><br/>
+                      <br/>
 
-                      Realizar el pago en siu-utl.scalahed.com en la pestaña de trámites en línea por $500 o con la referencia de tus pagos de colegiatura. Si realizas tu pago por otro medio deberás solicitar el trámite a tutoría enviando tu comprobante de pago.<br/><br/>
+                      El alumno tiene que realizar el pago en siu-utl.scalahed.com en la pestaña de trámites en línea por $500 o con la referencia de sus pagos de colegiatura. Si realiza el pago por otro medio deberá solicitar el trámite a tutoría y enviar su comprobante de pago.<br/><br/>
 
-                      Nota: Si realizas tu pago en línea la solicitud será creada en automático, el trámite tiene una duración de 4 a 10 días hábiles aproximadamente.<br/><br/>
-                      *En ambos casos se recomienda dar aviso al área de tutoría para el seguimiento.<br/>
+                      Nota: Si realiza su pago en línea la solicitud será creada en automático, el trámite tiene una duración de 4 a 10 días hábiles aproximadamente.<br/><br/>
+                      En ambos casos se recomienda dar aviso al área de tutoría para el seguimiento.<br/>
 
-                    </a>
                   </div>
 
                   <div class="pf card border-0 py-3 px-3" id="">
@@ -371,32 +386,24 @@
                       <br/>
 
                       <a>
-                        Para alumnos con bachillerato en el extranjero es necesario realizar trámite de Revalidación sí es que aun no tienes Resolución de Revalidación de bachillerato.<br/><br/>
+                        Para alumnos con bachillerato en el extranjero es necesario realizar trámite de Revalidación sí es que aun no tiene Resolución de Revalidación de bachillerato.<br/><br/>
 
-                        Los documentos en físico que necesitamos para darte de alta en SEP son:<br/><br/>
+                        Los documentos en físico que necesitamos para dar de alta en SEP al alumno son:<br/>
 
-                        Acta de nacimiento original si tu documento fue emitido en el extranjero debe tener apostilla o legalización.<br/><br/>
+                        Acta de nacimiento original si tu documento fue emitido en el extranjero debe tener apostilla o legalización.<br/>
 
-                        Resolución de Revalidación de bachillerato emitido por la Secretaría de Educación Pública. 
-                        Copia de identificación (INE o Pasaporte)<br/><br/>
+                        ● Resolución de Revalidación de bachillerato emitido por la Secretaría de Educación Pública. <br/>
+                        ● Copia de identificación (INE o Pasaporte)<br/>
+                        En caso de no tener *Resolución de Revalidación es necesario proporcionar para trámite.<br/>
+                        ●Certificado o diploma de bachillerato o equivalente legalizado o apostillado.<br/>
+                        ●Historia académica (tira de materias con calificaciones obtenidas)<br/>
+                        ●Plan de estudio de bachiller<br/>
+                        ●Carta poder llena con firma autógrafa.<br/>
+                        En caso de que los documentos sean en idioma diferente al español, traducción de Perito traductor.<br/>
+                        ●Realizar pago gestión de trámite $3,000.00<br/>
+                        ●Copia de identificación (INE o Pasaporte)<br/><br/>
 
-                        En caso de no tener *Resolución de Revalidación es necesario proporcionar para trámite.<br/><br/>
-
-                        Certificado o diploma de bachillerato o equivalente legalizado o apostillado.<br/><br/>
-
-                        Historia académica (tira de materias con calificaciones obtenidas)<br/><br/>
-
-                        Plan de estudio de bachiller<br/><br/>
-
-                        Carta poder llena con firma autógrafa.<br/><br/>
-
-                        En caso de que los documentos sean en idioma diferente al español, traducción de Perito traductor.<br/><br/>
-
-                        Realizar pago gestión de trámite $3,000.00<br/><br/>
-
-                        Copia de identificación (INE o Pasaporte)<br/><br/>
-
-                        El pago lo realizas en la página de siu-utl.scalahed.com en la etiqueta de tramites en línea, si realizas tu pago por otro medio solicita el trámite a tutoría enviando tu comprobante de pago.<br/><br/>
+                        El pago lo realiza en la página de siu-utl.scalahed.com en la etiqueta de tramites en línea, si realiza el pago por otro medio el alumno solicita el trámite a tutoría enviando su comprobante de pago.<br/><br/>
                       </a>
                   </div>
 
